--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -8,7 +8,7 @@
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-inline';"
     />
-    <title>Vite App</title>
+    <title>Long Live Graphics</title>
   </head>
   <body>
     <div id="root"></div>
