add webgpu rotating cube with colors

--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -9,6 +9,7 @@
       content="script-src 'self' 'unsafe-inline';"
     />
     <title>Long Live Graphics</title>
+    <script defer src="https://requirejs.org/docs/release/2.3.6/minified/require.js"></script>
   </head>
   <body>
     <div id="root"></div>
